Ensure acks are sent for all blocking events.

It was possible for two touch moves that had acks to get coalesced together
and the main thread would only process one and deliver the ack for it. This
caused a situation where the hung renderer timer was getting fired because
there was an outstanding ack in the count. And this timer forced the
omnibox to not go away.

A large portion of this change (plumbing the ack_state will go away when
I land my multi-thread main_thread_event_queue design); but since this
needs to be merged back to M52 this is safest.

BUG=616991

Review-Url: https://codereview.chromium.org/2094323002
Cr-Commit-Position: refs/heads/master@{#402703}
(cherry picked from commit b08721e61d24d65dce50e40731e08231deb95932)

Review URL: https://codereview.chromium.org/2118273002 .

Cr-Commit-Position: refs/branch-heads/2743@{#578}
Cr-Branched-From: 2b3ae3b8090361f8af5a611712fc1a5ab2de53cb-refs/heads/master@{#394939}