content/renderer/input/input_handler_manager.h
@@ -73,7 +73,8 @@ class CONTENT_EXPORT InputHandlerManager {
       const cc::InputHandlerScrollResult& scroll_result);
 
   void NotifyInputEventHandledOnMainThread(int routing_id,
-                                           blink::WebInputEvent::Type);
+                                           blink::WebInputEvent::Type,
+                                           InputEventAckState);
 
   // Callback only from the compositor's thread.
   void RemoveInputHandler(int routing_id);
@@ -118,7 +119,8 @@ class CONTENT_EXPORT InputHandlerManager {
       const cc::InputHandlerScrollResult& scroll_result);
 
   void NotifyInputEventHandledOnCompositorThread(int routing_id,
-                                                 blink::WebInputEvent::Type);
+                                                 blink::WebInputEvent::Type,
+                                                 InputEventAckState);
 
   typedef base::ScopedPtrHashMap<int,  // routing_id
                                  std::unique_ptr<InputHandlerWrapper>>
