content/renderer/mus/render_widget_mus_connection.cc
@@ -134,7 +134,8 @@ void RenderWidgetMusConnection::OnInputEventAck(
 }
 
 void RenderWidgetMusConnection::NotifyInputEventHandled(
-    blink::WebInputEvent::Type handled_type) {
+    blink::WebInputEvent::Type handled_type,
+    InputEventAckState ack_result) {
   NOTIMPLEMENTED();
 }
 
